--- a/bot_control/CMakeLists.txt
+++ b/bot_control/CMakeLists.txt
@@ -28,6 +28,10 @@ ament_target_dependencies(
 install(TARGETS turtlebot_control
   DESTINATION lib/${PROJECT_NAME})
 
+  install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
 
 
 ament_package()
